--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,2 @@
-spring.data.mongodb.host=[10.115.2.1]
-spring.data.mongodb.port=[27017]
-spring.data.mongodb.username=[mongoadmin]
-spring.data.mongodb.password=[mysecret]
-spring.data.mongodb.database=[appointments]
+spring.data.mongodb.uri=mongodb.//mongoadmin:mysecret@10.155.2.1:8017
+spring.data.mongodb.database=appointments
