Repository and Controller fix

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
-spring.data.mongodb.uri=mongodb.//mongoadmin:mysecret@10.155.2.1:8017
+spring.data.mongodb.uri=mongodb://mongoadmin:mysecret@10.115.2.1:8017
 spring.data.mongodb.database=appointments
+
+spring.main.allow-bean-definition-overriding=true
